@@ -3,6 +3,7 @@ Revision history for Perl extension DBIx::Skinny
 0.0711
    2010-XX-XX
         - FIXED : typo s/realy/really/ (thanks azumakuniyuki)
+        - FIXED : typo s/potition/position/g (thanks azumakuniyuki)
 
 0.0710
    2010-04-22
